sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:3: error: not found: value deb
  deb=0; fin=getNombreValeurs()-2;  var x=true ;;
  ^AlgCocktailSort2:3: error: not found: value fin
  deb=0; fin=getNombreValeurs()-2;  var x=true ;;
         ^AlgCocktailSort2:6: error: not found: value deb
   	for (j<- deb to fin) {
                 ^AlgCocktailSort2:13: error: not found: value fin
   	for (j<- fin  to deb) {
                 ^