sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  deb=0; fin=getNombreValeurs()-2;  var x=true ;;
   while (x) {
   	x = false;
   	for (j<- deb to fin) {
   		if (plusPetit(j+1 , j)) {
   	      	echange(j , j+1) ;
   	      	x = true;
   	      	fin -=;
   	  }
   	}
   	for (j<- fin  to deb) {
   		if (plusPetit(j+1 , j)) {
   	      	echange(j , j+1) ;
   	      	x = true;
   	      	deb +=;
   	  }
  
     }
   }
}

